--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
 <%= render 'layouts/header' %>	<!--If you want to show the contents of another file as html you need to save that file with an _ at the beginning and then use the tags <%= %>. If you want to use it but not show it, use <% %> -->
 
 <div class="container">
+
+	<%# Rails flash messages styled for Twitter Bootstrap 3.0 %>
+	<% flash.each do |name, msg| %>
+		<% if msg.is_a?(String) %>
+			<div class="alert alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %> alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				<%= content_tag :div, msg, :id => "flash_#{name}" %>
+			</div>
+		<% end %>
+	<% end %>
+
 	<%= yield %>
 
 	<%= render 'layouts/footer' %>
