--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -11,7 +11,7 @@
     <tr>
       <td class="center"><%= image_tag listing.image.url(:thumb) %></td>
       <td><div style="height:100px; overflow:hidden"><%= listing.name %></div></td>
-      <td><div style="height:100px; overflow:hidden"><%= listing.description %></div></td>
+      <td><div style="height:100px; max-width:1600px; overflow:hidden"><%= listing.description %></div></td>
       <td><%= number_to_currency(listing.price) %></td>
       <td>
         <!-- Single button -->
