Add banner to home page

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,8 @@
+<div class="jumbotron">
+  <h1 style="margin-left:270px; margin-top:0">Handcrafted items from around the world</h1>
+  <h2 style="margin-left:270px; margin-top:0">Discover one-of-a-kind items</h2>
+</div>
+
 <div class="center">
   <div class="row">
     <% @listings.each do |listing| %>
