Change link for banner image to use Dropbox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,7 +50,7 @@ body {
 }
 
 .jumbotron {
-	background-image: url('https://www.dropbox.com/s/a2g9yumhzgct2z2/jumbotron.jpg?dl=0?raw=1');
+	background-image: url('https://www.dropbox.com/s/a2g9yumhzgct2z2/jumbotron.jpg?raw=1');
 	h1, h2 {
 		font-family: guardian-egyptt, georgia, serif;
 	}
