--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -5,6 +5,9 @@
 	<div class="col-md-6">
 		<h3><%= @listing.name %></h3>
 		<p><%= number_to_currency(@listing.price) %></p>
+		<div class="center">
+			<%= link_to "Buy It Now", new_listing_order_path(@listing), class: "btn btn-success" %>
+		</div><br />
 		<p><%= @listing.description %></p>
 	</div>
 </div>
