--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,7 +6,7 @@
 		<h3><%= @listing.name %></h3>
 		<p><%= number_to_currency(@listing.price) %></p>
 		<div class="center">
-			<%= link_to "Buy It Now", new_listing_order_path(@listing), class: "btn btn-success" %>
+			<%= link_to "Buy It Now", new_listing_order_path(@listing), class: "btn btn-lg btn-success" %>
 		</div><br />
 		<p><%= @listing.description %></p>
 	</div>
