--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -1,3 +1,5 @@
+<div class="center"><h2>Manage Listings</h2></div><br />
+
 <table class="table table-striped table-bordered">
   <tr>
     <th class="center">Image</th>
