Add credit card fields to order form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,3 +59,13 @@ body {
 .color {
 	font-color:white;
 }
+
+.profilepic {
+        height:50px;
+        width:50px;
+        margin:auto;
+        border-radius:25px;
+        border:1px solid black;
+        display:none;
+        margin-top:5px;
+    }
