Charge credit cards

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,12 +60,6 @@ body {
 	font-color:white;
 }
 
-.profilepic {
-        height:50px;
-        width:50px;
-        margin:auto;
-        border-radius:25px;
-        border:1px solid black;
-        display:none;
-        margin-top:5px;
+.thumb {
+        height:100px;
     }
