--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -11,7 +11,7 @@
   
   <% @orders.each do |order| %>
     <tr>
-      <td class="center"><%= image_tag order.listing.image.url(:thumb) %></td>
+      <td class="center" style="width:100px"><%= image_tag order.listing.image.url(:thumb), class: "thumb" %></td>
       <td class="center"><div style="max-height:100px; overflow:hidden"><%= order.listing.name %></div></td>
       <td class="center"><%= number_to_currency(order.listing.price) %></td>
       <td class="center"><%= order.seller.name %></td>
