Charge credit cards

--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -18,7 +18,7 @@
       <td>
         <!-- Single button -->
         <div class="btn-group">
-          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+          <button type="button" class="btn btn-primary dropdown-toggle center" data-toggle="dropdown" aria-expanded="false">
             Action <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" role="menu">
