--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -17,8 +17,8 @@
       <td><%= number_to_currency(listing.price) %></td>
       <td>
         <!-- Single button -->
-        <div class="btn-group">
-          <button type="button" class="btn btn-primary dropdown-toggle center" data-toggle="dropdown" aria-expanded="false">
+        <div class="btn-group center">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             Action <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" role="menu">
