--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -17,7 +17,7 @@
       <td><%= number_to_currency(listing.price) %></td>
       <td>
         <!-- Single button -->
-        <div class="btn-group center">
+        <div class="btn-group">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             Action <span class="caret"></span>
           </button>
@@ -33,5 +33,5 @@
 </table>
 
 <% if user_signed_in? %>
-  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link", data: { no_turbolink: true } %>
 <% end %>
